# fretnote

./: .gitignore  AGENTS.md  Cargo.toml  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.svelte  App.tsx  bridge.rs  db.rs  main.rs  main.ts  main.tsx  model.rs  proxy.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/create/: page.tsx
src/components/: KeyboardShortcutsHelp.svelte  SearchPalette.svelte
src/components/create/: ChordPanel.svelte  CreateNoteForm.svelte  FretboardInput.svelte  NotePreview.svelte  StrummingEditor.svelte  StrummingPreview.svelte  TabEditor.svelte  TagInput.svelte  chord-panel.tsx  create-note-form.tsx  fretboard-input.tsx  note-summary.tsx  strumming-editor.tsx  tab-editor.tsx
src/components/feed/: FeedClient.svelte  feed-client.tsx
src/components/layout/: SiteFooter.svelte  SiteHeader.svelte  site-footer.tsx  site-header.tsx
src/components/notes/: note-card.tsx  (+10 more)
src/hooks/: use-element-width.ts
src/lib/: db.ts  export.ts  mock-data.ts  recent.ts  search-open.svelte.ts  setlists.ts  settings.ts  strumming.ts  types.ts
src/music/: chord_detect.rs  chords.rs  mod.rs  parse.rs  transpose.rs  tunings.rs
src/pages/: CreatePage.svelte  CreatePage.tsx  FeedPage.svelte  FeedPage.tsx  NotePage.svelte  NotePage.tsx  SetlistPage.svelte  SetlistsPage.svelte  SettingsPage.svelte
ui/: app.slint  chord-diagram.slint  structs.slint  theme.slint
(+21 files in other folders)
