[package]
name = "fretnote"
version = "0.1.0"
edition = "2021"
description = "A personal desktop songbook for guitarists — chord sheets and tabs, stored locally."

[dependencies]
slint = "1.17"
rusqlite = { version = "0.40", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
dirs = "6"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[build-dependencies]
slint-build = "1.17"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
